tests/ui/missing_non_modrs_mod/missing_non_modrs_mod_inline.stderr
error[E0583]: file not found for module `missing`
  --> $DIR/foo_inline.rs:4:5
   |
LL |     mod missing;
   |     ^^^^^^^^^^^^
   |
   = help: to create the module `missing`, create file "$DIR/foo_inline/inline/missing.rs" or "$DIR/foo_inline/inline/missing/mod.rs"
   = note: if there is a `mod missing` elsewhere in the crate already, import it with `use crate::...` instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0583`.
